<resources>
    <string name="app_name">My Priorities</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="q4">Q4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_now">Today/Now</string>
    <string name="menu_scheduled">Scheduled</string>
    <string name="menu_quick_todo">Quick ToDo</string>
    <string name="menu_may_skip">May Skip</string>
    <string name="menu_history">History</string>
    <string name="menu_know_your_productivity">Know Your Productivity</string>
    <string name="menu_settings">Settings</string>
    <string name="today">Today</string>
    <string name="necessity">NECESSITY</string>
    <string name="extr_prod">EXTRAORDINARY PRODUCTIVITY</string>
    <string name="distraction">DISTRACTION</string>
    <string name="waste">WASTE</string>
    <string name="new_task">New Task</string>
    <string name="category">Category</string>
    <string name="important">Important</string>
    <string name="urgent">Urgent</string>
    <string name="not_important">Not Important</string>
    <string name="not_urgent">Not Urgent</string>
    <string name="is_it_important">Is it Important?</string>
    <string name="is_it_urgent">Is it Urgent?</string>
    <string name="date">Date</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="menu_save">Save</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="menu_edit">Edit</string>
    <string name="task_name">Task name</string>
</resources>
