<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Your Priorities">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_now" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_scheduled" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_quick_todo" />
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_may_skip" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_history" />
        <item
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_know_your_productivity" />
        <item
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>

</menu>
