<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="avisha.com.myorganizer.view.NewTaskActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/taskNameLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/taskName"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/task_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/important_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taskNameLayout"
        android:layout_alignStart="@+id/taskNameLayout"
        android:layout_below="@+id/taskNameLayout"
        android:layout_marginTop="27dp"
        android:textOn="@string/important"
        android:textOff="@string/not_important"/>

    <Switch
        android:id="@+id/urgent_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/important_switch"
        android:layout_alignStart="@+id/important_switch"
        android:layout_below="@+id/important_switch"
        android:layout_marginTop="23dp"
        android:textOn="@string/urgent"
        android:textOff="@string/not_urgent"/>

    <EditText
        android:id="@+id/date_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/urgent_switch"
        android:layout_alignStart="@+id/urgent_switch"
        android:layout_below="@+id/urgent_switch"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Date"
        android:inputType="date" />

    <EditText
        android:id="@+id/time_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_edit"
        android:layout_alignStart="@+id/date_edit"
        android:layout_below="@+id/date_edit"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="Time"
        android:inputType="time" />

    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_edit"
        android:layout_alignStart="@+id/time_edit"
        android:layout_below="@+id/time_edit"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone_edit"
        android:layout_alignRight="@+id/phone_edit"
        android:layout_below="@+id/phone_edit"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit"
        android:layout_centerHorizontal="true"
        android:text="Save" />
</RelativeLayout>
